# Voice-Gender-Analyzer

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTORS  Dockerfile  LICENSE  README.md  README.zh-CN.md  acoustic_analyzer.py  docker-compose.yml  main.py  package.json  pnpm-lock.yaml  pyproject.toml  railway.json  railway.sidecar.toml  railway.toml  readme.md  requirements-prod.txt  requirements.txt  run_app.py  部署.txt
.claude/: settings.json  settings.local.json
backend/: __init__.py  __main__.py  acoustic_analyzer.py  config.py  main.py  queue.py
backend/audio_analyser/: __init__.py  auto_tools.py  engine_a.py  seg.py  seg_analyser.py
backend/routers/: api.py
backend/services/audio_analyser/: __init__.py  acoustic_analyzer.py  auto_tools.py  engine_a.py  seg.py  seg_analyser.py  statics.py
backend/utils/: is_valid_audio_file.py
docker/: start.py
docs/: COLOR_SCHEME.md  DEPLOYMENT_NOTES.md  ENGINE_C_ROADMAP.md  RAILWAY_DEPLOY.md
docs/plans/: advice_v2_conservative.md  engine_c_integration_research.md  v2_redesign_measurement.md
frontend/: index.html  package-lock.json
frontend/src/: main.js  utils.js
frontend/src/modules/: analyzer.js  metrics-panel.js  recorder.js  results.js  scatter.js  session-store.js  uploader.js  waveform.js
frontend/src/styles/: main.css
inaSpeechSegmenter-interspeech23/inaSpeechSegmenter/: _version.py  segmenter.py  sidekit_mfcc.py
scripts/: audit_resonance_en.py  audit_resonance_fr.py  audit_resonance_zh.py  bench_engine_a_load.py  compare_engines.py  deploy.sh  diff_stats_zh.py  gen_fixtures.py  init_iss_model.py  init_submodules.py  optimize_venv.py  predict.py  probe_legend_overlap.py  profile_pipeline.py  railway-bootstrap.sh  stage_cv_fr_subset.py  test.py  train_stats_en.py  train_stats_fr.py  train_stats_ko.py  train_stats_zh.py  validate_docker.py
scripts/calibration_v1/: README.md  aggregate.py  build_corpus.py
tests/: gen_category_eval.py  render_advice_v2.py  stress_f0_window.py  test_advice_v2.py  test_advice_v2_resonance.py  test_analyser_i18n.py  test_audio_gate.py  test_chunker.py  test_confidence_c1.py  test_e2e_resonance_perturbations.py  test_french_ceiling_selector.py  test_multichunk_merge.py  test_per_vowel_min_tokens.py  test_per_vowel_resonance_levels.py  test_resonance_calibration.py
tests/fixtures/: KNOWN_LIMITATIONS.md  manifest.yaml
tests/fixtures/audio/: .gitignore  README.md
tests/fixtures/ceiling_selector/: .gitignore  expected.json  f1_female_c5000.praat.txt  f2_female_c5500.praat.txt  f3_female_c6000.praat.txt  f4_female_c6500.praat.txt  french_mfa_dict.txt  m1_male_c4500.praat.txt  m2_male_c5000.praat.txt  m3_male_c5500.praat.txt  m4_male_c6000.praat.txt
tests/reports/: advice_v2_render_2026-04-27.md  category_eval_2026-04-27.md  e2e_perturbation_2026-05-04.md  e2e_perturbation_2026-05-05.md  en_resonance_baseline_2026-05-01.md  en_resonance_baseline_2026-05-05.md  fr_resonance_baseline_2026-05-01.md  zh_resonance_baseline_2026-05-01.md  zh_resonance_baseline_2026-05-01_pre5500.md  zh_resonance_baseline_2026-05-05.md
tests/reports/calibration_v1/: README.md  aggregate.csv  per_vowel_en-US_F.csv  per_vowel_en-US_M.csv  per_vowel_fr-FR_F.csv  per_vowel_fr-FR_M.csv  per_vowel_zh-CN_F.csv  per_vowel_zh-CN_M.csv
tools/diagnose/: diagnose-chart-mobile-width.mjs  diagnose-feedback-r2.mjs  diagnose-footer-legend.mjs  diagnose-heatmap-click.mjs  diagnose-legend-band.mjs  diagnose-playback-scroll.mjs  diagnose-scroll-trigger.mjs  diagnose-stats-position.mjs  diagnose-tiles.mjs  diagnose-transcript-align.mjs  diagnose-trend-modes.mjs
voiceya/: __init__.py  __main__.py  config.py  main.py  queue.py  taskiq.py
voiceya/inaSpeechSegmenter/: __init__.py
voiceya/inaSpeechSegmenter/inaSpeechSegmenter/: io.py  segmenter.py  (+2 more)
voiceya/routers/: __init__.py  api.py
voiceya/services/: analyser_sse_stream.py  events_stream.py  queue_position.py  redis.py  sse.py
voiceya/sidecars/: README.md  visualizer-backend.Dockerfile
voiceya/tasks/: analyser.py
voiceya/utils/: is_valid_audio_file.py  patch_ina.py  patch_numpy.py
web/: index.html  package.json  vite.config.js
web/scripts/: diagnose-play-icon.mjs  diagnose-transcript-overlap.mjs  diagnose-trend-click-seek.mjs  diagnose-trend-gradient.mjs  verify-diverging-cvd.mjs
web/src/: main.js  utils.js
(+85 files in other folders)
