[project]
name = "voice-gender-analyzer"
version = "0.1.0"
description = "基于深度学习与声学特征分析的音频性别识别 Web 应用"
license = "MPL-2.0"
readme = "README.md"

authors = [
    { name = "guojun", email = "fanhenna@outlook.com" },
    { name = "k3-cat", email = "k3-cat@outlook.com" },
]

requires-python = ">=3.13"
dependencies = [
    "av>=17.0.0",
    "fastapi>=0.135.3",
    "fastapi-limiter>=0.2.0",
    "librosa>=0.11.0",
    "numpy>=2.4.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.20",
    "redis>=7.4.0",
    "scipy>=1.17.1",
    "taskiq>=0.12.1",
    "taskiq-redis>=1.2.2",
    "uuid6>=2025.0.1 ; python_full_version < '3.14'",
    "uvicorn[standard]>=0.44.0",
]

[project.urls]
Homepage = "https://github.com/guojunximi-cell/Voice-Gender-Analyzer"

[dependency-groups]
dev = [
    "ruff>=0.15.10",
]
ina-ss = [
    "numpy>=2.4.4",
    "onnxruntime-gpu>=1.24.4",
    "pandas>=3.0.2",
    "pyannote-core>=6.0.1",
    "pytextgrid>=0.1.4",
    "scikit-image>=0.26.0",
    "tensorflow-cpu>=2.21.0",
]
# Engine C 进阶分析：worker 端 ASR + sidecar HTTP client.
# funasr 会拉入 torch（~700 MB），在 1–2 GB Docker 预算内；
# 关闭 ENGINE_C_ENABLED 时运行时不会 import，不产生加载开销。
engine-c = [
    "funasr>=1.2.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# no-editable = true
default-groups = ["ina-ss", "engine-c"]
# no-binary-package = ["av"]

[tool.hatch.build.targets.wheel]
packages = ["voiceya"]
